--- a/client/bennu-admin/src/main/webapp/bennu-admin/template/Menu.html
+++ b/client/bennu-admin/src/main/webapp/bennu-admin/template/Menu.html
@@ -95,7 +95,7 @@
 		      <h3>Install Application</h3>
 			</div>
 			<div class="modal-body">
-				<select ng-model="newApp" ng-required="true" ng-options="app.title for app in apps">
+				<select ng-model="newApp" ng-required="true" ng-options="app.title group by app.group for app in apps | orderBy:'title'">
 					<option value="">Select an application...</option>
 				</select>
 			</div>
